# CharmBoy

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  video_capture.py
data/: compliment_database - compliment_database.csv  compliment_database.csv
launch/: charmboy_node.launch
msg/: Compliment.msg
src/: compliment_picker.py  face_detection.py  face_eyes_smile-detection.py  facedetection.py  facial_landmarks.py  gender_age_detection.py  iris_detection.py  pytalker.py  roboy_face.py  roboy_talk.py
